[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "topology-vis"
version = "0.1.0"
edition = "2021"
description = "little frontend to visualize the topology of a network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
crypto = { version = "0.1.0", path = "../../core/crypto" }
libp2p = { version = "0.53.1", features = ["noise", "yamux", "wasm-bindgen", "macros"] }
log = "0.4.20"
macroquad = "0.4.4"
dht = { version = "0.1.0", path = "../../core/dht" }
topology-wrapper = { version = "0.1.0", path = "../../utils/topology-wrapper" }
wasm-bindgen-futures = "0.4.39"
websocket-websys = { version = "0.1.0", path = "../../utils/websocket-websys" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chain-api]
version = "0.1.0"
path = "../../core/chain-api"
features = ["native"]
default-features = false 

[target.'cfg(target_arch = "wasm32")'.dependencies.chain-api]
version = "0.1.0"
path = "../../core/chain-api"
features = ["web"]
default-features = false 

[features]
building = []

[lints]
workspace = true
