[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "topology-vis"
version = "0.1.0"
edition = { workspace = true }
description = "little frontend to visualize the topology of a network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.39"
libp2p = { workspace = true, features = ["noise", "yamux", "wasm-bindgen", "macros"] }
log = { workspace = true }
macroquad = "0.4.4"

component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
dht = { version = "0.1.0", path = "../../core/dht" }
topology-wrapper = { version = "0.1.0", path = "../../utils/topology-wrapper" }
websocket-websys = { version = "0.1.0", path = "../../utils/websocket-websys" }
crypto = { version = "0.1.0", path = "../../core/crypto" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chain-api]
version = "0.1.0"
path = "../../core/chain-api"
features = ["native"]
default-features = false 

[target.'cfg(target_arch = "wasm32")'.dependencies.chain-api]
version = "0.1.0"
path = "../../core/chain-api"
features = ["web"]
default-features = false 

[features]
building = []

[lints]
workspace = true
