[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "rpc"
version = "0.1.0"
edition = { workspace = true }
description = "simple rpc calls for libp2p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { workspace = true }
log = { workspace = true }

streaming = { workspace = true }
component-utils = { workspace = true }
codec = { workspace = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt", "time"] }
libp2p = { workspace = true, features = ["noise", "yamux", "tcp", "macros", "tokio"]}
env_logger = "0.11.0"
dht = { path = "../dht" }

[lints]
workspace = true
