[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "topology-wrapper"
version = "0.1.0"
edition = { workspace = true }
description = "topology visualization protocols for libp2p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { workspace = true }
log = { workspace = true }

component-utils = { workspace = true }
codec = { workspace = true }

[features]
disabled = []

[lints]
workspace = true
